# decision-dna-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  PRODUCTION.md  antigravity_usage.md  architecture.md  demo_capture_checklist.md  demo_script.md  kaggle_writeup.md  originality_statement.md  screenshots.md
notebooks/: decision_dna_ai_demo.py
scripts/: generate_project_signature.py
src/: __init__.py
src/agents/: __init__.py  adk_agents.py  audit_agent.py  base_agent.py  contract_genome_agent.py  documentation_genome_agent.py  gemini_integration.py  impact_agent.py  mutation_detection_agent.py  network_genome_agent.py  policy_genome_agent.py  rule_genome_agent.py  security_agent.py
src/data/: contract_versions.json  decision_snapshots.json  documentation_requirements.json  policy_versions.json  rule_versions.json  sample_cases.json
src/models/: __init__.py  decision_models.py
src/services/: __init__.py  genome_builder.py  mutation_engine.py  timeline_service.py
src/tools/: __init__.py  audit_mcp.py  contract_mcp.py  documentation_mcp.py  policy_mcp.py  rules_mcp.py
src/utils/: __init__.py  formatting.py
tests/: test_genome_forensics.py
